--- a/Android_Test/AndroidProgrammerTest/app/build.gradle
+++ b/Android_Test/AndroidProgrammerTest/app/build.gradle
@@ -23,6 +23,8 @@ android {
 dependencies {
     final SUPPORT_LIBRARY_VERSION = '24.0.0'
 
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:design:24.2.1'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile "com.android.support:appcompat-v7:$SUPPORT_LIBRARY_VERSION"
     compile "com.android.support:recyclerview-v7:$SUPPORT_LIBRARY_VERSION"
