--- a/Android_Test/AndroidProgrammerTest/app/src/main/AndroidManifest.xml
+++ b/Android_Test/AndroidProgrammerTest/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.apppartner.androidtest"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.apppartner.androidtest">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -20,12 +20,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".chat.ChatActivity" />
+        <activity android:name=".animation.AnimationActivity" />
+        <activity android:name=".login.LoginActivity" />
         <activity
-            android:name=".chat.ChatActivity" />
-        <activity
-            android:name=".animation.AnimationActivity" />
-        <activity
-            android:name=".login.LoginActivity" />
+            android:name=".BaseActivity"
+            android:label="@string/title_activity_base"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
