--- a/Android_Test/AndroidProgrammerTest/app/src/main/AndroidManifest.xml
+++ b/Android_Test/AndroidProgrammerTest/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
         <activity
             android:name=".BaseActivity"
             android:label="@string/title_activity_base"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+
     </application>
 
 </manifest>
