--- a/Android_Test/AndroidProgrammerTest/app/build.gradle
+++ b/Android_Test/AndroidProgrammerTest/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+    compile 'com.plattysoft.leonids:LeonidsLib:1.3.2'
 
     testCompile 'junit:junit:4.12'
 }
